--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,11 +2,12 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
     <uses-permission android:name="android.permission.NFC" /> 
-<application
+   <application
         android:label="watchtower_mobile"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
-        <activity
+         <activity
+            android:requestLegacyExternalStorage="true"
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
@@ -35,6 +36,6 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-            
-    </application>
+        
+     </application>
 </manifest>
