--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:icon="@mipmap/ic_launcher">
          <meta-data android:name="com.google.android.geo.API_KEY"
                android:value="AIzaSyDVg5vcvY9XAIuFAHQwU-WdUOiK6blninA"/>
-
+            <activity
             android:requestLegacyExternalStorage="true"
             android:name=".MainActivity"
             android:exported="true"
