--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   image_picker: ^1.0.7
   permission_handler: ^11.3.0
   flutter_image_compress: ^2.1.0
+  cached_network_image: ^3.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
